src/main/resources/darkmode.css
.button {
    -fx-background-color: #38414A;
    -fx-text-fill: #B6C2CF;
    -fx-border-color: #738496;
}

.root {
    -fx-background-color: #282E33 !important;
}

.label {
    -fx-text-fill: #B6C2CF !important;
}

.tab-content {
    -fx-background-color: #282E33;
}

.tab-pane {
    -fx-background-color: #282E33;
    -fx-border-color: transparent;
    -fx-effect: null;
}

.tab .tab-label {
    -fx-text-fill: #B6C2CF;
}

.tab {
    -fx-background-color: #2C333A;
}

.tab:selected {
    -fx-background-color: #454F59;
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
}

.tab-content {
    -fx-background-color: transparent;
}

.scroll-pane .viewport {
    -fx-border-width: 0px;
    -fx-border-color: transparent;
}

.text-field:selected {
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
}

.search {
    -fx-background-color: #596773;
    -fx-border-color: #38414A;
    -fx-border-radius: 5px;
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
}

.split-pane-divider {
    -fx-background-color: #d9d9d9;
}

.split-pane > .split-pane-item {
    -fx-background-color: transparent;
}

.HBox {
    -fx-background-color: transparent;
}

.disabled {
    -fx-background-color: rgb(0,90,6); -fx-border-width: 1px; -fx-border-color: black; -fx-border-radius: 4px; -fx-background-radius: 4px
}

.active {
    -fx-background-color: #00FD11; -fx-border-width: 1px; -fx-border-color: black; -fx-border-radius: 4px; -fx-background-radius: 4px
}

.scroll-pane .viewport {
    -fx-background-color: #282E33 !important;
}

.scroll-pane .track {
    -fx-background-color: #282E33 !important;
}

#hbox_WAVE1, #hbox_WAVE2, #hbox_WAVE3, #recordExportBox {
    -fx-background-color: #282E33 !important;
}

#vbox, #parameterChooser1, #parameterChooser2, #parameterChooser3, #waveVbox {
    -fx-background-color: #282E33 !important;
}

.pane {
    -fx-background-color: #282E33;
}

.tool-bar {
    -fx-background-color: #1D2125 !important;
    -fx-border-color: #454F59;
}

.text-field {
    -fx-background-color: #596773;
}

.radio-button {
    -fx-text-fill: #B6C2CF;
}

